@@ -1,5 +1,5 @@
 [settings]
-;domain=VOUK
-;machine=SVR18
-;user=VOUK\goldent
-;password=Metebel14
+domain=VOUK
+machine=SVR18
+user=VOUK\goldent
+password=Metebel14
